# Frank_ros2

./: .gitignore  arm_base_coordinator.py  bag_logger.py  bag_to_csv_min.py  continuous_traj.py  ee2base.py  frames_2025-10-17_11.01.23.gv  frames_2025-10-17_11.25.07.gv  frames_2025-10-17_15.26.32.gv  goal_from_base_offset.py  goal_pose.csv  goto.py  joint6_id_data_20251114_124849.csv  joint6_id_data_20251114_125514.csv  joint6_id_data_20251114_130216.csv  joint6_id_data_20251114_130651.csv  joint6_id_data_20251114_131155.csv  joint6_id_data_20251114_131614.csv  joint6_id_data_20251114_132110.csv  mecanum_controller_reference.csv  resolved_rate_controller_ee_twist.csv  send_traj.py  tag_to_base.py  twist_stamped_pub.py  twist_sweep_pub.py  vrpn_mocap_RigidBody_1_pose.csv
install/: local_setup.sh  setup.sh
install/include/ombot_base_kinematics/: mecanum_kinod.hpp
install/include/ombot_effort_controller/: effort_controller.hpp
install/include/ombot_hardware/: ombot_arm_hardware.hpp  ombot_base_hardware.hpp
install/lib/locomotion_core/: rover_velocity
install/lib/ombot_base_kinematics/: mecanum_kinod
install/lib/teleop_core/: rover2_joy
install/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: ombot_hardware
install/share/ament_index/resource_index/package_run_dependencies/: ombot_bringup  ombot_controller  ombot_description  (+1 more)
install/share/locomotion_core/: package.dsv  package.ps1  package.sh  package.xml
install/share/ombot_base_kinematics/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/ombot_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/ombot_bringup/cmake/: ombot_bringupConfig.cmake
install/share/ombot_bringup/config/: ombot_controller.yaml
install/share/ombot_bringup/launch/: gravity_controller.launch.py  joint_impedance_controller.launch.py  ombot_base_controller.launch.py  ombot_effort_controller.launch.py  send_trajectory_om.launch.py
install/share/ombot_controller/: ombot_controller.xml  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/ombot_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/ombot_description/launch/: view_ombot.launch.py
install/share/ombot_description/rviz/: view_robot.rviz
install/share/ombot_description/urdf/: ombot.urdf.xacro
install/share/ombot_description/urdf/arm/: ombot_arm.ros2_control.xacro  ombot_arm.urdf.xacro  ombot_arm_module.urdf.xacro
install/share/ombot_description/urdf/base/: mecanum_base.urdf.xacro  ros2_control_base.xacro
install/share/ombot_description/urdf/base/mech/: mecanum_wheel.urdf.xacro  robot_3d_base.urdf.xacro
install/share/ombot_description/urdf/base/sensors/: lidar.urdf.xacro  rgbd_camera.urdf.xacro
install/share/ombot_hardware/: local_setup.dsv  local_setup.sh  ombot_hardware.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/rover_launch/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/rover_launch/launch/: rover.launch.py
install/share/teleop_core/: package.dsv  package.ps1  package.sh
log/: latest_build
my_test_run/: metadata.yaml  my_test_run_0.db3  my_test_run_0.db3.zstd
ombot_run/: metadata.yaml  ombot_run_0.db3  ombot_run_0.db3.zstd
ombot_run1/: metadata.yaml  ombot_run1_0.db3  ombot_run1_0.db3.zstd
src/: commands.txt  dummy
src/locomotion_core/: setup.py
src/locomotion_core/launch/: default_launch.py
src/locomotion_core/locomotion_core/: cmd_roboteq.py
src/ombot_base_kinematics/: CMakeLists.txt
src/ombot_base_kinematics/src/: mecanum_kinod.cpp
src/ombot_bringup/: CMakeLists.txt  package.xml
src/ombot_bringup/config/: ombot_controller.yaml  qos.yaml
src/ombot_bringup/launch/: apriltag_zed.launch.py  arm_base_coordination.launch.py  base_with_offset_tests.launch.py  bringup_wb_with_bag.launch.py  bringup_with_bag.launch.py  chainable_controllers.launch.py  dummy.launch.py  gravity_controller.launch.py  joint_impedance_controller.launch.py  minimum.launch.py  ombot.launch.py  ombot_base_controller.launch.py  ombot_joint_excitation.launch.py  robot_camera.launch.py
src/ombot_bringup/src/: bag_to_csv.py
src/ombot_controller/: CMakeLists.txt  controller_structure.txt  ombot_controller.xml  package.xml  vbnet
src/ombot_controller/include/gravity_cancel_controller/: gravity_cancel_controller.hpp
src/ombot_controller/include/joint_excitation_controller/: joint_excitation_controller.hpp
src/ombot_controller/include/joint_impedance_controller/: joint_impedance_controller.hpp
src/ombot_controller/include/resolved_rate_controller/: resolved_rate_controller.hpp
src/ombot_controller/include/wb_resolved_rate_controller/: wb_resolved_rate_controller.hpp
src/ombot_controller/src/: ee_to_base.cpp  effort_controller.cpp  gravity_cancel_controller.cpp  joint_excitation_controller.cpp  joint_impedance_controller.cpp  mecanum_forward_cmd.cpp  resolved_rate_controller.cpp  wb_resolved_rate_controller.cpp
src/ombot_coordination/: package.xml  setup.cfg  setup.py
src/ombot_coordination/ombot_coordination/: arm_base_coordinator.py  arm_zero_twist.py  base_p_on_x.py  dummy.py  goal_from_base_offset_latched.py  set_null_kp.py  whole_body_task_commander.py
src/ombot_description/: CMakeLists.txt
src/ombot_description/launch/: view_ombot.launch.py
src/ombot_description/ros2_control/: ombot.ros2_control.xacro
src/ombot_description/urdf/: ombot.urdf.xacro
src/ombot_description/urdf/arm/: ombot_arm.ros2_control.xacro  ombot_arm_description.urdf.xacro
src/ombot_description/urdf/base/: mecanum_base.urdf.xacro
src/ombot_hardware/: CMakeLists.txt  ombot_hardware.xml  package.xml
src/ombot_hardware/include/ombot_hardware/: ombot_arm_hardware.hpp  ombot_base_hardware.hpp  roboteq_iface.hpp
src/ombot_hardware/src/: ombot_arm_hardware.cpp  ombot_base_hardware.cpp  roboteq_iface.cpp
