<?xml version="1.0"?>
<package format="3">
  <name>ombot_bringup</name>
  <version>0.0.1</version>
  <description>Launch files and controller YAML to start Ombot.</description>

  <maintainer email="you@example.com">Kevin Wang</maintainer>
  <license>Apache-2.0</license>
  <author>Kevin Wang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch/runtime deps -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Your own packages (so bringup finds their files/classes) -->
  <exec_depend>ombot_description</exec_depend>
  <exec_depend>ombot_hardware</exec_depend>
  <exec_depend>ombot_controller</exec_depend>
  <depend>ombot_base_kinematics</depend>


  <!-- Optional CLI tools -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
