<?xml version="1.0"?>
<package format="3">
  <name>ombot_description</name>
  <version>0.0.1</version>
  <description>URDF/Xacro, meshes, and RViz configs for Ombot.</description>

  <maintainer email="you@example.com">Kevin Wang</maintainer>
  <license>Apache-2.0</license>
  <author>Kevin Wang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- At runtime you’ll usually use these with the assets -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Optional if you keep launch files here -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
