<?xml version="1.0"?>
<package format="3">
  <name>ombot_hardware</name>
  <version>0.0.1</version>
  <description>Hardware SystemInterface plugin for Ombot.</description>

  <maintainer email="you@example.com">Kevin Wang</maintainer>
  <license>Apache-2.0</license>
  <author>Kevin Wang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build deps -->
  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>Eigen3</build_depend>

  <!-- Code deps -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>dynamixel_sdk</depend>

  <!-- Exec deps -->
  <exec_depend>eigen3_cmake_module</exec_depend>
  <exec_depend>Eigen3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
